feat(cv): copy pdf to /public

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,8 +22,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				years.
 			</p>
 			<p>
-				Here is <a href="cv.compact.pdf">the resume (compact version)</a> and its longer and
-				<a href="cv.full.pdf">boring version</a>
+				Here is <a href="hamsternik.compact.pdf">the resume (compact version)</a> and its longer and
+				<a href="hamsternik.cv.pdf">boring version</a>
 			</p>
 			<ul class="list-disc">
 				<li>
