feat: deploy new resume

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import { SITE_DESCRIPTION } from "../consts";
         FinTech, Social, Healthcare, and Health &amp; Fitness.
       </p>
       <p>
-        Here is my <a href="niki.khomitsevych.pdf">resume</a>.
+        Here is my <a href="nkhomitsevych.resume.pdf">resume</a>.
       </p>
       <ul class="list-disc">
         <li>
